Bug 1814692 - Don't attempt realtime scheduling rtc::PlatformThreads. r=webrtc-reviewers,bwc

Differential Revision: https://phabricator.services.mozilla.com/D169036